# CompositeMinimaxApplication

./: CMakeLists.txt  README.md  remez_approximation_pipeline.py
cmake/: FindGMP.cmake
log/: log-minimum.txt  log-ranking.txt  log-sorting.txt
remez_outputs_cluster/10.96578428/: coefficients_15_1.txt  coefficients_23_4.txt  coefficients_7_2.txt  coefficients_9_3.txt
remez_outputs_cluster/11.11778738/: coefficients_15_1.txt  coefficients_23_4.txt  coefficients_7_3.txt  coefficients_9_2.txt
remez_outputs_cluster/11.28771238/: coefficients_15_1.txt  coefficients_23_4.txt  coefficients_9_2.txt  coefficients_9_3.txt
remez_outputs_cluster/11.48035746/: coefficients_15_1.txt  coefficients_27_4.txt  coefficients_9_2.txt  coefficients_9_3.txt
remez_outputs_cluster/11.70274988/: coefficients_15_1.txt  coefficients_31_4.txt  coefficients_9_2.txt  coefficients_9_3.txt
remez_outputs_cluster/11.96578428/: coefficients_15_1.txt  coefficients_27_2.txt  coefficients_55_3.txt
remez_outputs_cluster/2/: coefficients_3_1.txt
remez_outputs_cluster/2.1/: coefficients_3_1.txt  coefficients_3_2.txt
remez_outputs_cluster/2.321928095/: coefficients_3_1.txt
remez_outputs_cluster/2.736965594/: coefficients_7_1.txt
remez_outputs_cluster/3.321928095/: coefficients_15_1.txt
remez_outputs_cluster/4.321928095/: coefficients_7_1.txt  coefficients_7_2.txt
remez_outputs_cluster/4.473931188/: coefficients_7_1.txt  coefficients_7_2.txt
remez_outputs_cluster/4.64385619/: coefficients_47_1.txt
remez_outputs_cluster/4.836501268/: coefficients_11_2.txt  coefficients_7_1.txt
remez_outputs_cluster/5.058893689/: coefficients_13_2.txt  coefficients_7_1.txt
remez_outputs_cluster/5.321928095/: coefficients_3_1.txt  coefficients_7_2.txt  coefficients_7_3.txt
remez_outputs_cluster/5.64385619/: coefficients_13_1.txt  coefficients_13_2.txt
remez_outputs_cluster/6.058893689/: coefficients_15_1.txt  coefficients_15_2.txt
remez_outputs_cluster/6.64385619/: coefficients_13_3.txt  coefficients_5_1.txt  coefficients_7_2.txt
remez_outputs_cluster/7.64385619/: coefficients_13_4.txt  coefficients_3_1.txt  coefficients_5_2.txt  coefficients_7_3.txt
remez_outputs_cluster/7.795859283/: coefficients_13_1.txt  coefficients_15_3.txt  coefficients_7_2.txt
remez_outputs_cluster/7.965784285/: coefficients_15_1.txt  coefficients_15_3.txt  coefficients_7_2.txt
remez_outputs_cluster/8.158429363/: coefficients_15_1.txt  coefficients_3_3.txt  coefficients_7_2.txt  coefficients_7_4.txt
remez_outputs_cluster/8.380821784/: coefficients_11_2.txt  coefficients_13_3.txt  coefficients_15_1.txt
remez_outputs_cluster/8.64385619/: coefficients_13_2.txt  coefficients_15_1.txt  coefficients_15_3.txt
src/: demo.cpp  minimum.cpp  minimum.h  optimized_degrees.cpp  optimized_degrees.h  ranking.cpp  ranking.h  ranking_compos.cpp  ranking_compos.h  remez_2.py  remez_multi_sign_2.py  sorting.cpp  sorting.h  utils-basics.cpp  utils-basics.h  utils-eval.cpp  utils-eval.h  utils-matrices.cpp  utils-matrices.h  utils-ptxt.cpp  utils-ptxt.h  utils-remez.cpp  utils-remez.h
text/: CC11.txt  CC13.txt  CC15.txt  CC17.txt  CC19.txt  CC21.txt  CC23.txt  CC25.txt  CC27.txt  CC29.txt  CC3.txt  CC31.txt  CC33.txt  CC35.txt  CC37.txt  CC39.txt  CC41.txt  CC43.txt  CC45.txt  CC47.txt  CC49.txt  CC5.txt  CC51.txt  CC53.txt  CC55.txt  CC57.txt  CC59.txt  CC61.txt  CC63.txt  CC7.txt  CC9.txt
(+10 files in other folders)
